# DCCLite

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  DccLite.sln  appveyor.yml  check.cppcheck  dcclite.code-workspace  readme.md  release_notes.md  todo.txt  tycoon_module.txt
contrib/: CMakeLists.txt
contrib/cityhash/: CMakeLists.txt  city.cc
src/: CMakeLists.txt  linux.txt
src/ArduinoLib/: Arduino.cpp  Arduino.h  ArduinoDefs.h  ArduinoLib.cpp  ArduinoLib.h  ArduinoLib.vcxproj  ArduinoLib.vcxproj.filters  ArduinoLibDefs.h  CMakeLists.txt  DynamicLibrary.cpp  DynamicLibrary.h  EEPROM.cpp  EEPROM.h  EEPROMLib.h  Ethercard.cpp  Ethercard.h  ReadMe.txt  Serial.cpp  Serial.h  Servo.cpp  Servo.h  WString.h
src/Broker/: Broker.cpp  Broker.h  CMakeLists.txt  DccLiteService.cpp  DccLiteService.h  DccppService.cpp  DccppService.h  Decoder.cpp  Decoder.h  Device.cpp  Device.h  FileWatcher.cpp  FileWatcher.h  IDccLiteService.h  IDevice.h  LiteManagerService.cpp  LiteManagerService.h  LocationManager.cpp  LocationManager.h  LocationManagerService.cpp  LocationManagerService.h  NetworkDevice.cpp  NetworkDevice.h  OutputDecoder.cpp  OutputDecoder.h  PinManager.cpp  PinManager.h  Project.cpp  Project.h  RemoteDecoder.cpp  RemoteDecoder.h  SensorDecoder.cpp  SensorDecoder.h  Service.cpp  Service.h  SignalDecoder.cpp  SignalDecoder.h  SimpleOutputDecoder.cpp  SimpleOutputDecoder.h  TerminalCmd.cpp  (+8 more)
src/BrokerExec/: CMakeLists.txt
src/BrokerLib/: BonjourService.cpp  BonjourService.h  Broker.cpp  Broker.h  CMakeLists.txt  DccAddress.cpp  DccAddress.h  DccLiteService.cpp  DccLiteService.h  DccppService.cpp  DccppService.h  Decoder.cpp  Decoder.h  Device.cpp  Device.h  EventHub.cpp  EventHub.h  FileWatcher.cpp  FileWatcher.h  IDccLiteService.h  IDevice.h  LocationManager.cpp  LoconetService.cpp  LoconetService.h  Messenger.cpp  Messenger.h  NetworkDevice.cpp  NetworkDevice.h  NetworkDeviceTasks.cpp  NetworkDeviceTasks.h  OutputDecoder.cpp  OutputDecoder.h  PinManager.cpp  PinManager.h  Project.cpp  Project.h  QuadInverter.cpp  RemoteDecoder.cpp  RemoteDecoder.h  ScriptService.cpp  (+25 more)
src/BrokerShell/: CMakeLists.txt
src/BrokerSys/: CMakeLists.txt
src/BrokerTycoon/: CMakeLists.txt
src/Common/: Benchmark.h  CMakeLists.txt  ClassInfo.h  Clock.cpp  Clock.h  Common.vcxproj  Common.vcxproj.filters  ConsoleUtils.cpp  ConsoleUtils.h  ConsoleUtils_linux.cpp  ConsoleUtils_win.cpp  DirectoryMonitor.h  DirectoryMonitor_win.cpp  FileSystem.h  FmtUtils.h  FolderObject.cpp  FolderObject.h  GuidUtils.cpp  GuidUtils.h  GuidUtils_linux.cpp  GuidUtils_win.cpp  IFolderObject.h  JsonUtil.cpp  JsonUtils.cpp  JsonUtils.h  Log.h  LogUtils.cpp  LogUtils.h  NetMessenger.cpp  NetMessenger.h  NmraUtil.cpp  NmraUtil.h  Object.cpp  Object.h  PathUtils.cpp  PathUtils.h  RName.cpp  RName.h  SerialPort.h  SerialPort_linux.cpp  (+12 more)
src/DccLiteBroker/: Broker.cpp  CMakeLists.txt  DccLiteService.cpp  DccLiteService.h  Decoder.h  Device.cpp  Device.h  OutputDecoder.cpp  OutputDecoder.h  SensorDecoder.cpp  SensorDecoder.h  Service.h  SpecialFolders.cpp  SpecialFolders.h  TerminalCmd.cpp  TerminalCmd.h  TerminalService.cpp  TerminalService.h  main.cpp
src/DccLiteBrooker/: DccLiteBrooker.vcxproj  DccLiteBrooker.vcxproj.filters
src/DccLiteTerminal/: DccLiteTerminal.vcxproj  DccLiteTerminal.vcxproj.filters  main.cpp
src/Embedded/: CMakeLists.txt
src/Emulator/: CMakeLists.txt  Emulator.vcxproj  main.cpp
src/Launcher/: CMakeLists.txt  main.cpp
src/LiteDecoder/: CMakeLists.txt  EmbeddedLib.vcxproj  EmbeddedLib.vcxproj.filters  LiteDecoderLib.vcxproj  LiteDecoderLib.vcxproj.filters  platformio.ini
src/LitePanel/: CMakeLists.txt  GLCanvas.cpp  GLCanvas.h  LitePanel.aps  LitePanel.cpp  LitePanel.h  LitePanel.rc  MapCanvas.cpp  MapCanvas.h  MapEditorCanvas.cpp  MapEditorCanvas.h  PanelDocument.cpp  PanelDocument.h  PanelDocumentView.cpp  PanelDocumentView.h  PanelEditorCanvas.cpp  PanelEditorCanvas.h  TempObjects.cpp  TempObjects.h  TileMapCanvas.cpp  TileMapCanvas.h  main.cpp
src/LitePanelLib/: CMakeLists.txt  EditCmds.cpp  EditCmds.h  LitePanelLibDefs.h  MapObject.cpp  MapObject.h  MapObjectFactory.cpp  MapObjectFactory.h  Panel.cpp  Panel.h  Point.h  RailObject.cpp  RailObject.h  TileMap.cpp  TileMap.h
src/LitePanelSDL/: CMakeLists.txt  main.cpp  todo.txt
src/LiteWiring/: CMakeLists.txt  Cable.cpp  Cable.h  Device.cpp  Device.h  LiteWiring.h  Project.cpp  Project.h  ProjectItem.cpp  ProjectItem.h  ProjectView.cpp  ProjectView.h  main.cpp
src/SharpCommon/: CMakeLists.txt  IServoTurnout.cs  ServoTurnoutProgramerForm.cs
src/SharpDude/: ArduinoService.cs  CMakeLists.txt  MainForm.Designer.cs  MainForm.cs
src/SharpEEpromViewer/: CMakeLists.txt  MainForm.Designer.cs  MainForm.cs  MainForm.resx  ObjectInspectorUserControl.cs  Program.cs  Storage.cs
src/SharpTerminal/: CMakeLists.txt  ConsoleUserControl.Designer.cs  ConsoleUserControl.cs  DashboardUserControl.cs  DashboardUserControl.resx  DefaultIcons.cs  Form1.Designer.cs  Form1.cs  Form1.resx  IConsole.cs  ITerminalClientListener.cs  ObjectsTreeViewUserControl.Designer.cs  ObjectsTreeViewUserControl.cs  ObjectsTreeViewUserControl.resx  Program.cs  RemoteDecoder.cs  RemoteDecoderUserControl.Designer.cs  RemoteDecoderUserControl.cs  RemoteDevice.cs  RemoteDeviceUserControl.Designer.cs  RemoteDeviceUserControl.cs  RemoteDeviceUserControl.resx  RemoteDispatcher.cs  RemoteInfoService.cs  RemoteInfoServiceUserControl.Designer.cs  RemoteInfoServiceUserControl.cs  RemoteInfoServiceUserControl.resx  RemoteLocationManager.cs  RemoteLocationManagerService.cs  RemoteLocationManagerUserControl.Designer.cs  RemoteLocationManagerUserControl.cs  RemoteLocationUserControl.Designer.cs  RemoteLocationUserControl.cs  RemoteLocationUserControl.resx  RemoteLoconetService.cs  RemoteLoconetServiceUserControl.Designer.cs  RemoteLoconetServiceUserControl.cs  RemoteLoconetServiceUserControl.resx  RemoteObject.cs  RemoteObjectUserControl.Designer.cs  (+14 more)
src/Terminal/: CMakeLists.txt  main.cpp
src/Tests/: CMakeLists.txt
src/UnitTest/: BitPackUnitTest.cpp  (+25 more)
(+825 files in other folders)
